Comment out SVG icon in index.html
Commented out the SVG element in the header.

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
         <div class="container mx-auto py-16 relative z-10">
             <div class="flex items-center justify-center space-x-4 mb-4">
                 <!-- 主标题旁边的图标 -->
-                <svg class="w-16 h-16 text-brand-theme" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="currentColor">
+<!--                 <svg class="w-16 h-16 text-brand-theme" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="currentColor">
                     <path d="M30 40 Q40 30 50 40 Q60 30 70 40 L65 50 L75 60 L60 65 L50 80 L40 65 L25 60 L35 50 Z M50 80 Q50 95 30 90 M50 80 Q50 95 70 90"/>
-                </svg>
+                </svg> -->
                 <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight drop-shadow-md">
                     <span class="text-brand-theme">Hydra:</span> Structured Cross-Source Enhanced Large Language Model Reasoning
                 </h1>
