--- a/index.html
+++ b/index.html
@@ -137,11 +137,15 @@
     <nav class="sticky top-0 z-40 backdrop-blur-md shadow-lg transition-colors duration-300">
         <div class="container mx-auto flex items-center justify-between p-4 md:px-8">
             <a href="#top" class="flex items-center space-x-2 text-xl font-bold transition-colors duration-300">
-                <!-- 导航栏中的图标 -->
-                <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="currentColor">
-                    <path d="M30 40 Q40 30 50 40 Q60 30 70 40 L65 50 L75 60 L60 65 L50 80 L40 65 L25 60 L35 50 Z M50 80 Q50 95 30 90 M50 80 Q50 95 70 90"/>
-                </svg>
-                <span class="text-brand-theme">Hydra</span>
+                <!-- 导航栏中的logo图片 -->
+                <img src="img/hydra-logo-purple-1024.png" alt="Hydra Logo" class="w-7 h-7" onerror="this.src='https://placehold.co/100x100/1e293b/d1d5db?text=Logo';">
+                <div class="flex flex-col">
+                    <span class="text-brand-theme">Hydra</span>
+                    <!-- 添加的EMNLP标注 -->
+                    <span class="text-xs font-medium text-muted-theme mt-[-4px]">
+                        emnlp2025 (Main conference)
+                    </span>
+                </div>
             </a>
             <div class="flex items-center space-x-4">
                 <nav class="hidden md:flex space-x-6 text-sm font-medium">
@@ -167,10 +171,8 @@
         </div>
         <div class="container mx-auto py-16 relative z-10">
             <div class="flex items-center justify-center space-x-4 mb-4">
-                <!-- 主标题旁边的图标 -->
-<!--                 <svg class="w-16 h-16 text-brand-theme" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="currentColor">
-                    <path d="M30 40 Q40 30 50 40 Q60 30 70 40 L65 50 L75 60 L60 65 L50 80 L40 65 L25 60 L35 50 Z M50 80 Q50 95 30 90 M50 80 Q50 95 70 90"/>
-                </svg> -->
+                <!-- 主标题旁边的logo图片 -->
+                <img src="img/hydra-logo-purple-1024.png" alt="Hydra Logo" class="w-16 h-16 text-brand-theme" onerror="this.src='https://placehold.co/100x100/1e293b/d1d5db?text=Logo';">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight drop-shadow-md">
                     <span class="text-brand-theme">Hydra:</span> Structured Cross-Source Enhanced Large Language Model Reasoning
                 </h1>
@@ -278,7 +280,7 @@
                     </svg>
                     Read the paper
                 </a>
-                <!-- 更新后的 Browse the code link -->
+                <!-- 更新后的 Code (GitHub) Icon -->
                 <a href="https://github.com/SteveTANTAN/HydraRAG" target="_blank" rel="noopener noreferrer" class="flex items-center px-6 py-3 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105" style="background-color: var(--panel-light); color: var(--text-light); border: 1px solid var(--border-light);">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github w-5 h-5 mr-2">
                         <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.23c2.58-.35 5.28-1.25 5.28-5.72A4 4 0 0 0 16 5c.42-1.2 1.48-2.58.5-4C17.6 2.56 16.5 4 14.5 4a6.6 6.6 0 0 0-3.5 1.4A6.7 6.7 0 0 0 8.5 4c-2 0-3.1 1.44-4.5 3-.98 1.42-.5 2.8-.5 4a4.05 4.05 0 0 0 5.28 5.72c-.9.23-1.88.54-2.8.9A4.8 4.8 0 0 0 2 18v4"/>
@@ -286,7 +288,7 @@
                         <path d="M15 11v1a1 1 0 0 1-2 0v-1a1 1 0 0 1 2 0z"/>
                         <path d="M12 2a4 4 0 0 0-4 4v.5a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V6a4 4 0 0 0-4-4z"/>
                     </svg>
-                    Browse the code
+                    Code (GitHub)
                 </a>
             </div>
         </section>
