Correct capitalization of 'EMNLP2025'

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <span class="text-brand-theme">Hydra</span>
                     <!-- 添加的EMNLP标注 -->
                     <span class="text-xs font-medium text-muted-theme mt-[-4px]">
-                        emnlp2025 (Main conference)
+                        EMNLP2025 (Main conference)
                     </span>
                 </div>
             </a>
