--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <span class="text-brand-theme">Hydra</span>
                     <!-- 添加的EMNLP标注 -->
                     <span class="text-xs font-medium text-muted-theme mt-[-4px]">
-                        EMNLP2025 (Main conference)
+                        EMNLP2025 (Main Conference)
                     </span>
                 </div>
             </a>
@@ -182,6 +182,8 @@
                 <p class="text-lg md:text-xl text-muted-theme opacity-80">
                     ¹University of New South Wales · ²Data61, CSIRO
                 </p>
+                <p>EMNLP2025 (Main Conference)</p>
+
             </div>
             <div class="mt-8 flex flex-wrap justify-center gap-4">
                 <!-- 更新后的 Paper (Document) Icon -->
