--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </style>
     <!-- 新设计的网站图标 (Favicon) -->
     <!-- <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M30 40 Q40 30 50 40 Q60 30 70 40 L65 50 L75 60 L60 65 L50 80 L40 65 L25 60 L35 50 Z M50 80 Q50 95 30 90 M50 80 Q50 95 70 90' fill='%23ffffff' stroke='%23ffffff' stroke-width='5' /%3E%3C/svg%3E" type="image/svg+xml"> -->
-    <link rel="icon" href="hydra-logo-brand-1024.png" type="image/png">
+    <link rel="icon" href="img/hydra-logo-brand-1024.png" type="image/png">
 </head>
 <body class="transition-colors duration-300">
 
