Revise author section with links and EMNLP2025 info
Updated author information with links and conference details.

--- a/index.html
+++ b/index.html
@@ -178,14 +178,57 @@
                     <span class="text-brand-theme">Hydra:</span> Structured Cross-Source Enhanced Large Language Model Reasoning
                 </h1>
             </div>
-            <div class="mt-8 space-y-2 text-xl md:text-2xl font-medium text-muted-theme drop-shadow-sm">
+            <!-- <div class="mt-8 space-y-2 text-xl md:text-2xl font-medium text-muted-theme drop-shadow-sm">
                 <p>Xingyu Tan¹² · Xiaoyang Wang¹ · Qing Liu² · Xiwei Xu² · Xin Yuan² · Liming Zhu² · Wenjie Zhang¹</p>
                 <p class="text-lg md:text-xl text-muted-theme opacity-80">
                     ¹University of New South Wales · ²Data61, CSIRO
                 </p>
                 <p>EMNLP2025 (Main Conference)</p>
 
-            </div>
+            </div> -->
+            <div class="mt-8 space-y-2 text-xl md:text-2xl font-medium text-muted-theme drop-shadow-sm">
+    <p>
+        <a href="https://stevetantan.github.io/" class="text-brand-theme hover:underline" target="_blank">
+            Xingyu Tan
+            <sup class="text-sm">1,2</sup>
+        </a>
+        ·
+        <a href="https://www.unsw.edu.au/staff/xiaoyang-wang" class="text-brand-theme hover:underline" target="_blank">
+            Xiaoyang Wang
+            <sup class="text-sm">1</sup>
+        </a>
+        ·
+        <a href="https://people.csiro.au/L/Q/Q-Liu" class="text-brand-theme hover:underline" target="_blank">
+            Qing Liu
+            <sup class="text-sm">2</sup>
+        </a>
+        ·
+        <a href="https://people.csiro.au/X/S/Xiwei-Xu" class="text-brand-theme hover:underline" target="_blank">
+            Xiwei Xu
+            <sup class="text-sm">2</sup>
+        </a>
+        ·
+        <a href="https://people.csiro.au/y/x/xin-yuan" class="text-brand-theme hover:underline" target="_blank">
+            Xin Yuan
+            <sup class="text-sm">2</sup>
+        </a>
+        ·
+        <a href="https://people.csiro.au/Z/L/Liming-Zhu" class="text-brand-theme hover:underline" target="_blank">
+            Liming Zhu
+            <sup class="text-sm">2</sup>
+        </a>
+        ·
+        <a href="https://cgi.cse.unsw.edu.au/~zhangw/" class="text-brand-theme hover:underline" target="_blank">
+            Wenjie Zhang
+            <sup class="text-sm">1</sup>
+        </a>
+    </p>
+    <p class="text-lg md:text-xl text-muted-theme opacity-80">
+        <sup class="text-sm">1</sup>University of New South Wales ·
+        <sup class="text-sm">2</sup>Data61, CSIRO
+    </p>
+    <p>EMNLP2025 (Main Conference)</p>
+</div>
             <div class="mt-8 flex flex-wrap justify-center gap-4">
                 <!-- 更新后的 Paper (Document) Icon -->
                 <a href="https://arxiv.org/pdf/2505.17464" target="_blank" rel="noopener noreferrer" class="flex items-center px-6 py-3 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-105" style="background-color: var(--brand-strong-light); color: white;">
