Update meta tags and viewport settings in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
       gtag('config', 'G-0GXWJTGBSH');
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Official Website [EMNLP25]Hydra: Structured Cross-Source Enhanced Large Language Model Reasoning">
+    <meta name="keywords" content="EMNLP25, Hydra, LLM">
+
+    <link rel="canonical" href="https://stevetantan.github.io/Hydra/">
+    
     <title>Hydra: Structured Cross-Source Enhanced Large Language Model Reasoning</title>
     <!-- 引入 Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
