--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 </div>
             </div>
             <div class="mt-8">
-                <img src="img/overall.jpg" alt="Hydra pipeline: initialisation → exploration → pruning → answering" class="w-full h-auto rounded-lg shadow-xl" onerror="this.src='https://placehold.co/1200x600/1e293b/d1d5db?text=Image+Not+Found';">
+                <img src="img/overall.png" alt="Hydra pipeline: initialisation → exploration → pruning → answering" class="w-full h-auto rounded-lg shadow-xl" onerror="this.src='https://placehold.co/1200x600/1e293b/d1d5db?text=Image+Not+Found';">
                 <span class="block mt-2 text-center text-xs text-muted-theme">Figure 2: System pipeline with the four stages used in our implementation.</span>
             </div>
             <div class="mt-8">
