--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <span class="px-3 py-1 rounded-full bg-code-theme text-muted-theme">Training-free</span>
             </div>
             <div class="mt-8">
-                <img src="img/intro.jpg" alt="Hydra overview: agent explores KG + text and applies tri-factor verification." class="w-full h-auto rounded-lg shadow-xl" onerror="this.src='https://placehold.co/1200x600/1e293b/d1d5db?text=Image+Not+Found';">
+                <img src="img/intro.png" alt="Hydra overview: agent explores KG + text and applies tri-factor verification." class="w-full h-auto rounded-lg shadow-xl" onerror="this.src='https://placehold.co/1200x600/1e293b/d1d5db?text=Image+Not+Found';">
                 <span class="block mt-2 text-center text-xs text-muted-theme">Figure 1: Four LLM reasoning paradigms and Hydra's cross-source workflow.</span>
             </div>
         </section>
