Rename Hydra to HydraRAG in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <!-- 导航栏中的logo图片 -->
                 <img src="img/hydra-logo-purple-1024.png" alt="Hydra Logo" class="w-7 h-7" onerror="this.src='https://placehold.co/100x100/1e293b/d1d5db?text=Logo';">
                 <div class="flex flex-col">
-                    <span class="text-brand-theme">Hydra</span>
+                    <span class="text-brand-theme">HydraRAG</span>
                     <!-- 添加的EMNLP标注 -->
                     <span class="text-xs font-medium text-muted-theme mt-[-4px]">
                         EMNLP2025 (Main Conference)
@@ -405,7 +405,7 @@ python hydra_main.py webqsp --no-web --depth 3
         <!-- BibTeX 部分 -->
         <section id="bibtex" class="section-panel p-6 md:p-10 mt-8 rounded-2xl transition-all duration-300">
             <h2 class="text-2xl md:text-3xl font-bold mb-4 text-brand-theme relative pb-2">BibTeX</h2>
-            <pre id="bib" class="rounded-lg p-4 bg-code-theme overflow-x-auto"><code>@misc{tan2025hydra,
+            <pre id="bib" class="rounded-lg p-4 bg-code-theme overflow-x-auto"><code>@misc{tan2025hydraRAG,
     title={HydraRAG: Structured Cross-Source Enhanced Large Language Model Reasoning}, 
     author={Xingyu Tan and Xiaoyang Wang and Qing Liu and Xiwei Xu and Xin Yuan and Liming Zhu and Wenjie Zhang},
     year={2025},
